[package]
name = "bn254"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.15.6"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
bytes = "1.5.0"
commonware-codec = "0.0.48"
commonware-cryptography = "0.0.48"
commonware-utils = "0.0.48"
eigen-crypto-bn254 = "0.5.0"
rand = "0.8.5"
