[package]
name = "bn254"
version = "0.1.3"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
bytes = "1.5.0"
commonware-codec = "0.0.50"
commonware-cryptography = "0.0.50"
commonware-utils = "0.0.50"
eigen-crypto-bn254 = "0.5.0"
rand = "0.8.5"
